--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -25,6 +25,17 @@
 				gl_FragColor = vec4(1.0,0.0,1.0,1.0);
 			}
 		</script>
+		<script type="x-shader/x-vertex" id="skyboxvertexshader">
+			void main() {
+				gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0);
+			}
+		</script>
+		<script type="x-shader/x-fragment" id="skyboxfragmentshader">
+			uniform sampler2D texture1;
+			void main() {
+				gl_FragColor = texture2D(texture1, 1.0);
+			}
+		</script>
 	</head>
 	
 	<body>
