--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -27,13 +27,18 @@
 		</script>
 		<script type="x-shader/x-vertex" id="skyboxvertexshader">
 			void main() {
-				gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0);
+				vUv = uv;
+				
+				gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
 			}
 		</script>
 		<script type="x-shader/x-fragment" id="skyboxfragmentshader">
 			uniform sampler2D texture1;
+			
+			varying vec2 vUv;
+			
 			void main() {
-				gl_FragColor = texture2D(texture1, 1.0);
+				gl_FragColor = texture2D(texture1, vUv);
 			}
 		</script>
 	</head>
