Shader syntax fix.

--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -26,6 +26,8 @@
 			}
 		</script>
 		<script type="x-shader/x-vertex" id="skyboxvertexshader">
+			varying vec2 vUv;
+			
 			void main() {
 				vUv = uv;
 				
