--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -129,7 +129,7 @@
 		<script type="x-shader/x-fragment" id="planet_f_shader">
 			uniform sampler2D planetTexture;
 			uniform vec3 lightPos;
-			uniform lightDir;
+			uniform vec3 lightDir;
 			
 			varying vec3 color;
 			varying vec3 secondaryColor;
