--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -149,9 +149,9 @@
 				float rayleighPhase = 0.75 * (1.0 + cos * cos);
 				float miePhase = ((1.0 - g2) / (2.0 + g2)) * (1.0 + cos * cos) / pow(1.0 + g2 - 2.0 * g * cos, 1.5);
 				
-				gl_FragColor = texture2D(planetTexture, vUv);
-				//gl_FragColor.rgb = 1.0 - exp(-exposure * (texture2D(planetTexture, vUv) + rayleighPhase * color * miePhase * secondaryColor));
-				//gl_FragColor.a = 1.0;
+				//gl_FragColor = texture2D(planetTexture, vUv);
+				gl_FragColor.rgb = 1.0 - exp(-exposure * (texture2D(planetTexture, vUv).rgb + rayleighPhase * color * miePhase * secondaryColor));
+				gl_FragColor.a = 1.0;
 			}
 		</script>
 	</head>
