--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -79,7 +79,7 @@
 			}
 			
 			void main() {
-				float camPos = cameraPosition - position;
+				vec3 camPos = cameraPosition - position;
 				
 				//1
 				//vec3 pos = position.xyz;
