--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -48,7 +48,6 @@
 				precision highp float;
 			#endif
 			
-			uniform vec3 planetPos;
 			uniform vec3 cameraPos;
 			uniform float cameraHeight2;
 			
@@ -83,10 +82,9 @@
 			}
 			
 			void main() {
-				vec3 vertPos = position - planetPos;
 				//1
 				//vec3 pos = position.xyz;
-				vec3 ray = vertPos - cameraPos;
+				vec3 ray = position - cameraPos;
 				
 				float far = length(ray);
 				ray = ray / far;
@@ -126,7 +124,7 @@
 				color = frontColor * (invWaveLength * krESun);
 				secondaryColor = frontColor * kmESun;
 				gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
-				direction = cameraPos - vertPos;
+				direction = cameraPos - position;
 			}
 		</script>
 		<script type="x-shader/x-fragment" id="atmosphere_f_shader">
@@ -160,7 +158,6 @@
 				precision highp float;
 			#endif
 			
-			uniform vec3 planetPos;
 			uniform vec3 cameraPos;
 			uniform float cameraHeight2;
 			
@@ -196,10 +193,9 @@
 			}
 			
 			void main() {
-				vec3 vertPos = position - planetPos;
 				//1
 				//vec3 pos = position.xyz;
-				vec3 ray = vertPos - cameraPos;
+				vec3 ray = position - cameraPos;
 				
 				float far = length(ray);
 				ray = ray / far;
@@ -214,8 +210,8 @@
 				vec3 start = cameraPos + ray * near;
 				far = far - near;
 				float depth = exp((innerRadius - outerRadius) / scaleDepth);
-				float cameraAngle = dot(-ray, vertPos) / length(vertPos);
-				float lightAngle = dot(lightDir, vertPos) / length(vertPos);
+				float cameraAngle = dot(-ray, position) / length(position);
+				float lightAngle = dot(lightDir, position) / length(position);
 				float lightScale = scaleFunc(lightAngle);
 				float cameraScale = scaleFunc(cameraAngle);
 				float cameraOffset = depth*cameraScale;
