Removed rayleigh phase.

--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -149,8 +149,8 @@
 				float rayleighPhase = 0.75 + 0.75 * cos2;
 				float miePhase = 1.5 * ((1.0 - g2) / (2.0 + g2)) * (1.0 * cos2) / pow(abs(1.0 + g2 - 2.0 * g * cos), 1.5);
 				
-				gl_FragColor = vec4(rayleighPhase * color + miePhase * secondaryColor, 1.0);
-				//gl_FragColor = vec4(color + miePhase * secondaryColor, 1.0);
+				//gl_FragColor = vec4(rayleighPhase * color + miePhase * secondaryColor, 1.0);
+				gl_FragColor = vec4(color + miePhase * secondaryColor, 1.0);
 			}
 		</script>
 		<script type="x-shader/x-vertex" id="ground_v_shader">
