--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -140,7 +140,7 @@
 			
 			const float g = -0.1;
 			const float g2 = g * g;
-			const float exposure = 2;
+			//const float exposure = 2.0;
 			
 			void main() {
 				float cos = dot(lightDir, direction) / length(direction); //TODO this is giving negative parameter to pow function in miephase function
