--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -11,6 +11,7 @@
 		<script src="js/lib/common.js" type="text/javascript"></script>
 		<script src="js/lib/vec3.js" type="text/javascript"></script>
 		<script src="js/lib/three.min.js" type="text/javascript"></script>
+		<script src="js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
 		<script src="js/lib/TrackballControls.js" type="text/javascript"></script>
 		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
@@ -271,7 +272,7 @@
 			<script src="js/tradesim_model.js" type="text/javascript"></script>
 		</div>
 		<p>
-			LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
+			Press 'f' for full screen. LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
 		</p>
 	</body>
 </html>
