--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -12,6 +12,7 @@
 		<script src="js/lib/vec3.js" type="text/javascript"></script>
 		<script src="js/lib/three.min.js" type="text/javascript"></script>
 		<script src="js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
+		<script src="js/lib/THREEx.WindowResize.js" type="text/javascript"></script>
 		<script src="js/lib/TrackballControls.js" type="text/javascript"></script>
 		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
