--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -85,7 +85,6 @@
 			
 			void main() {
 				//1
-				//vec3 pos = position.xyz;
 				vec3 ray = position - cameraPos;
 				
 				float far = length(ray);
@@ -250,8 +249,8 @@
 				precision highp float;
 			#endif
 			
-			uniform sampler2D planetTexture;
-			//uniform sampler2D nightTexture;
+			uniform sampler2D dayTexture;
+			uniform sampler2D nightTexture;
 			
 			varying vec3 color;
 			varying vec3 secondaryColor;
@@ -259,11 +258,10 @@
 			varying vec2 vUv;
 			
 			void main() {
-				vec3 day = texture2D(planetTexture, vUv).xyz * color;
-				vec3 night = vec3(0.0, 0.0, 0.0);
-				
+				vec3 day = texture2D(dayTexture, vUv).xyz * color;
+				vec3 night = 0.15 * texture2D(nightTexture, vUv).xyz * (1.0 - color);
+
 				gl_FragColor = vec4(secondaryColor, 1.0) + vec4(day + night, 1.0);
-				gl_FragColor = vec4(secondaryColor, 1.0) + vec4(texture2D(planetTexture, vUv).xyz * color, 1.0);
 			}
 		</script>
 	</head>
