--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -274,6 +274,7 @@
 			void main() {
 				vCameraDirDotNorm = abs(dot(normalize(cameraDir), normal));
 				vCameraDirDotNorm = min(1.0, pow(vCameraDirDotNorm, 100.0));
+				vCameraDirDotNorm *= 2.0;
 				gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
 			}
 		</script>
