Added bg image for trade sim. Reordered projects on index page.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		</h1>
 		<ul class="grid columns-2">
 			<li>
+				<a href="tradesim/tradesim.html" title="Space Trading Simulation"><img src="images/trd_sim_bg.png"></a>
+				<h3>Agent Based Space Trading Simulation</h3>
+				<p>An agent based simulation of trading between colonies.</p>
+			</li>
+			<li>
 				<a href="sppsim/sppsim.html" title="Self-Propelled Particle Simulation"><img src="images/spp_sim_bg.png"></a>
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>A minimal simulation of self-propelled particles.</p>
-			</li>
-			<li>
-				<a href="tradesim/tradesim.html" title="Space Trading Simulation"><img src="images/spp_sim_bg.png"></a>
-				<h3>Agent Based Space Trading Simulation</h3>
-				<p>An agent based simulation of trading between colonies.</p>
 			</li>
 		</ul>
 	</body>
