Added link to new page on index.html.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 				<h3>Self-Propelled Particle Simulation</h3>
 				<p>A minimal simulation of self-propelled particles.</p>
 			</li>
+			<li>
+				<a href="shipsim/shipsim.html" title="Ship Movement Simulation"><img src="images/spp_sim_bg.png"></a>
+				<h3>Self-Propelled Particle Simulation</h3>
+				<p>A testing environment for ship simulation controls.</p>
+			</li>
 		</ul>
 	</body>
 </html>
