--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</li>
 			<li>
 				<a href="shipsim/shipsim.html" title="Ship Movement Simulation"><img src="images/spp_sim_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
+				<h3>Ship Movement Simulation</h3>
 				<p>A testing environment for ship simulation controls.</p>
 			</li>
 		</ul>
