Initial outline for ship control project.

--- a/shipsim/shipsim.html
+++ b/shipsim/shipsim.html
@@ -16,6 +16,37 @@
 		<script src="js/lib/OrbitControls.js" type="text/javascript"></script>
 		<script src="js/lib/dat.gui.min.js" type="text/javascript"></script>
 		<script src="js/lib/fpsmeter.js" type="text/javascript"></script>
+		
+		<script type="x-shader/x-vertex" id="unlit_v_shader">
+			void main() {
+				gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0);
+			}
+		</script>
+		<script type="x-shader/x-fragment" id="unlit_f_shader">
+			uniform vec3 colour;
+			
+			void main() {
+				gl_FragColor = vec4(colour,1.0);
+			}
+		</script>
+		<script type="x-shader/x-vertex" id="unlit_tex_v_shader">
+			varying vec2 vUv;
+			
+			void main() {
+				vUv = uv;
+				
+				gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+			}
+		</script>
+		<script type="x-shader/x-fragment" id="unlit_tex_f_shader">
+			uniform sampler2D texture1;
+			
+			varying vec2 vUv;
+			
+			void main() {
+				gl_FragColor = texture2D(texture1, vUv);
+			}
+		</script>
 	</head>
 	
 	<body>
