--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		</h1>
 		<ul class="grid columns-3">
 			<li>
-				<a href="shipsim/shipsim.html" title="Ship Movement Simulation"><img src="images/spp_sim_bg.png"></a>
+				<a href="shipsim/shipsim.html" title="Ship Movement Simulation (Under Development)"><img src="images/spp_sim_bg.png"></a>
 				<h3>Ship Movement Simulation</h3>
 				<p>A testing environment for ship simulation controls.</p>
 			</li>
