--- a/shipsim/shipsim.html
+++ b/shipsim/shipsim.html
@@ -54,6 +54,12 @@
 	
 	<body>
 		<div class="centerColumn">
+			<h1>
+				Prototype Controls.
+			</h1>
+			<p>
+				An exploration of an in-browser RTS style control scheme.
+			</p>
 			<div id="canvas" class="webgl">
 				<script src="js/shipsim.js" type="text/javascript"></script>
 			</div>
