--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>SPP Simulation</title>
+		<title>Trade Simulation</title>
 		
 		<meta charset="UTF-8"> 
 		<LINK href="../webgl.css" rel="stylesheet" type="text/css">
@@ -292,6 +292,12 @@
 	
 	<body>
 		<div class="centerColumn">
+			<h1>
+				Agent-based Trade Simulation.
+			</h1>
+			<p>
+				A simulation of planetary trade and colonisation.
+			</p>
 			<div id="canvas" class="webgl">
 				<script src="js/tradesim_model.js" type="text/javascript"></script>
 			</div>
