--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <html>
 	<head>
-		<LINK href="index.css" rel="stylesheet" type="text/css">
+		<LINK href="webgl.css" rel="stylesheet" type="text/css">
 		<title>Douglas Hoyal Cuthill - Portfolio in Progress</title>
 	</head>
 	<body>
-		<h1>
-		Projects
-		</h1>
-		<ul class="grid columns-3">
-			<li>
-				<a href="shipsim/shipsim.html" title="Ship Movement Simulation (Under Development)"><img src="images/spp_sim_bg.png"></a>
-				<h3>Ship Movement Simulation</h3>
-				<p>A testing environment for ship simulation controls.</p>
-			</li>
-			<li>
-				<a href="tradesim/tradesim.html" title="Space Trading Simulation"><img src="images/trd_sim_bg.png"></a>
-				<h3>Agent Based Space Trading Simulation</h3>
-				<p>An agent based simulation of trading between colonies.</p>
-			</li>
-			<li>
-				<a href="sppsim/sppsim.html" title="Self-Propelled Particle Simulation"><img src="images/spp_sim_bg.png"></a>
-				<h3>Self-Propelled Particle Simulation</h3>
-				<p>A minimal simulation of self-propelled particles.</p>
-			</li>
-		</ul>
+		<div class="centerColumn">
+			<h1>
+			Projects
+			</h1>
+			<ul class="grid columns-3">
+				<li>
+					<a href="shipsim/shipsim.html" title="Ship Movement Simulation (Under Development)"><img src="images/spp_sim_bg.png"></a>
+					<h3>Ship Movement Simulation</h3>
+					<p>A testing environment for ship simulation controls.</p>
+				</li>
+				<li>
+					<a href="tradesim/tradesim.html" title="Space Trading Simulation"><img src="images/trd_sim_bg.png"></a>
+					<h3>Agent Based Space Trading Simulation</h3>
+					<p>An agent based simulation of trading between colonies.</p>
+				</li>
+				<li>
+					<a href="sppsim/sppsim.html" title="Self-Propelled Particle Simulation"><img src="images/spp_sim_bg.png"></a>
+					<h3>Self-Propelled Particle Simulation</h3>
+					<p>A minimal simulation of self-propelled particles.</p>
+				</li>
+			</ul>
+		</div>
 	</body>
 </html>
