--- a/shipsim/shipsim.html
+++ b/shipsim/shipsim.html
@@ -57,13 +57,13 @@
 			<h1>
 				Prototype Controls.
 			</h1>
-			<p>
+			<p class="centerColumn">
 				An exploration of an in-browser RTS style control scheme.
 			</p>
 			<div id="canvas" class="webgl">
 				<script src="js/shipsim.js" type="text/javascript"></script>
 			</div>
-			<p>
+			<p class="centerColumn">
 				Press 'f' for full screen. LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
 			</p>
 		</div>
