--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -295,13 +295,13 @@
 			<h1>
 				Agent-based Trade Simulation.
 			</h1>
-			<p>
+			<p class="centerColumn">
 				A simulation of planetary trade and colonisation.
 			</p>
 			<div id="canvas" class="webgl">
 				<script src="js/tradesim_model.js" type="text/javascript"></script>
 			</div>
-			<p>
+			<p class="centerColumn">
 				Press 'f' for full screen. LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
 			</p>
 		</div>
