Adjusted html to match new css.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="centerColumn">
-			<h1>
+			<h1 class="centerColumn">
 			Projects
 			</h1>
 			<ul class="grid columns-3">
