--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -292,7 +292,7 @@
 	
 	<body>
 		<div class="centerColumn">
-			<h1>
+			<h1 class="centerColumn">
 				Agent-based Trade Simulation.
 			</h1>
 			<p class="centerColumn">
