--- a/shipsim/shipsim.html
+++ b/shipsim/shipsim.html
@@ -54,7 +54,7 @@
 	
 	<body>
 		<div class="centerColumn">
-			<h1>
+			<h1 class="centerColumn">
 				Prototype Controls.
 			</h1>
 			<p class="centerColumn">
