--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>Douglas Hoyal Cuthill - Portfolio in Progress</title>
 	</head>
 	<body>
+		<div class="topBar">
+			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+		</div>
 		<div class="centerColumn">
 			<h1 class="centerColumn">
 			Projects
