--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -291,6 +291,9 @@
 	</head>
 	
 	<body>
+		<div class="topBar">
+			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+		</div>
 		<div class="centerColumn">
 			<h1 class="centerColumn">
 				Agent-based Trade Simulation.
