--- a/shipsim/shipsim.html
+++ b/shipsim/shipsim.html
@@ -53,6 +53,9 @@
 	</head>
 	
 	<body>
+		<div class="topBar">
+			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+		</div>
 		<div class="centerColumn">
 			<h1 class="centerColumn">
 				Prototype Controls.
