--- a/sppsim/sppsim.html
+++ b/sppsim/sppsim.html
@@ -18,6 +18,9 @@
 	</head>
 	
 	<body>
+		<div class="topBar">
+			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+		</div>
 		<div id="canvas" class="webgl">
 			<script src="js/sppsim_model.js" type="text/javascript"></script>
 		</div>
