HTML/CSS changes

--- a/tradesim/tradesim.html
+++ b/tradesim/tradesim.html
@@ -292,7 +292,9 @@
 	
 	<body>
 		<div class="topBar">
-			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+			<div class="titleBar">
+				<h1 class="titleBar">Douglas Hoyal Cuthill</h1>
+			</div>
 		</div>
 		<div class="centerColumn">
 			<h1 class="centerColumn">
