--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	</head>
 	<body>
 		<div class="topBar">
-			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+			<div class="titleBar">
+				<h1 class="titleBar">Douglas Hoyal Cuthill</h1>
+			</div>
 		</div>
 		<div class="centerColumn">
 			<h1 class="centerColumn">
