--- a/sppsim/sppsim.html
+++ b/sppsim/sppsim.html
@@ -19,7 +19,9 @@
 	
 	<body>
 		<div class="topBar">
-			<h1 class="topBar">Douglas Hoyal Cuthill</h1>
+			<div class="titleBar">
+				<h1 class="titleBar">Douglas Hoyal Cuthill</h1>
+			</div>
 		</div>
 		<div id="canvas" class="webgl">
 			<script src="js/sppsim_model.js" type="text/javascript"></script>
