--- a/sppsim/sppsim.html
+++ b/sppsim/sppsim.html
@@ -23,17 +23,25 @@
 				<h1 class="titleBar">Douglas Hoyal Cuthill</h1>
 			</div>
 		</div>
-		<div id="canvas" class="webgl">
-			<script src="js/sppsim_model.js" type="text/javascript"></script>
+		<div class="centerColumn">
+			<h1>
+				Agent-based Trade Simulation.
+			</h1>
+			<p>
+				A simulation of planetary trade and colonisation.
+			</p>
+			<div id="canvas" class="webgl">
+				<script src="js/sppsim_model.js" type="text/javascript"></script>
+			</div>
+			<p>
+				LMB: Rotate, MMB: Zoom, RMB: Pan. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
+			</p>
+			<p>
+				Self-Propelled Particles are used to model flocking, swarming and schooling behaviour. The model has been applied to a rich host of biological species such as Starlings and Locusts. 
+				The model describes swarming behaviour at an individual scale where independent particles determine their movement from the positioning and orientation of the particles in their vicinity. In the most minimal form 
+				the model uses three rules to determine direction of movement of the particles at the next time step. These rules describe interaction between independent particles whereby they are repulsed at close distances, aligned 
+				at moderate distances and attracted at far distances.
+			</p>
 		</div>
-		<p>
-			LMB: zoom, MMB: Pan, RMB: Rotate. Performance is substantially better in Chrome than in Firefox or IE. Optimisation will hopefully be looked at soon but for now I suggest using Chrome if you are having any performance issues.
-		</p>
-		<p>
-			Self-Propelled Particles are used to model flocking, swarming and schooling behaviour. The model has been applied to a rich host of biological species such as Starlings and Locusts. 
-			The model describes swarming behaviour at an individual scale where independent particles determine their movement from the positioning and orientation of the particles in their vicinity. In the most minimal form 
-			the model uses three rules to determine direction of movement of the particles at the next time step. These rules describe interaction between independent particles whereby they are repulsed at close distances, aligned 
-			at moderate distances and attracted at far distances.
-		</p>
 	</body>
 </html>
