SPP updated to use new project code. HTML/CSS changes.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
 	<body>
 		<div class="topBar">
 			<div class="titleBar">
-				<h1 class="titleBar">Douglas Hoyal Cuthill</h1>
+				<h1 class="name">Douglas Hoyal Cuthill</h1>
+				<a class="projects" href="projects.html">Projects</a>
 			</div>
 		</div>
 		<div class="centerColumn">
 			<h1 class="centerColumn">
-			Projects
+				Hey, it's me! Mario!
 			</h1>
+			<p>
+				Lorem ipsum dolor sit amet, reprimique scripserit id per, mea nemore discere pertinax te, et duo nibh eleifend assentior. Appetere abhorreant eam in. Vis ne laudem fabellas lobortis, ei duo integre insolens. Augue falli ius eu, ex bonorum detracto repudiare his. Mei ut aliquando repudiandae.
+
+				Cum percipit instructior an, ei duo quod legendos. Malis verear lobortis ne eos. Et suscipit expetenda pri, no quo summo utroque. Ea paulo adipisci recteque quo, mucius nostro eos cu. Ei usu lorem meliore.
+
+				Antiopam inciderint quo te. In est incorrupte delicatissimi. Ea vim graece tincidunt, cum ex aliquip civibus omittantur. An tota populo adipisci sit, sit inani iriure consectetuer id, ea quo bonorum suavitate assentior. Id vim reque nulla dissentias.
+
+				Possit aperiri insolens eos cu, mucius possit usu no. Eros lorem vis at, dicit latine dissentiet eos te, velit oportere petentium eum ex. An minimum fastidii percipitur mea, ut virtute recusabo nam. Dicta imperdiet efficiantur id sit, alia eligendi luptatum per et.
+
+				Vis nibh error salutatus ne. Movet causae phaedrum in per. Pro enim laboramus inciderint te, utroque molestiae concludaturque eum ex. Ea case prompta pri, quo lorem euripidis instructior et.
+			</p>
 			<ul class="grid columns-3">
 				<li>
 					<a href="shipsim/shipsim.html" title="Ship Movement Simulation (Under Development)"><img src="images/spp_sim_bg.png"></a>
