--- a/sppsim/sppsim.html
+++ b/sppsim/sppsim.html
@@ -13,8 +13,10 @@
 		<script src='../js/lib/dat.gui.min.js' type='text/javascript'></script>
 		<script src="../js/lib/fpsmeter.js" type="text/javascript"></script>
 		<script src="../js/lib/OrbitControls.js" type="text/javascript"></script>
+		<script src="../js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
 		
-		<script src="../js/THREEx.Renderer.js" type="text/javascript"></script>
+		<script src="../js/Lib.Renderer.js" type="text/javascript"></script>
+		<script src="../js/Lib.ObjectManager.js" type="text/javascript"></script>
 	</head>
 	
 	<body>
