--- a/projects/webgl/sppsim/spp_sim.html
+++ b/projects/webgl/sppsim/spp_sim.html
@@ -5,18 +5,18 @@
 		<title>SPP Simulation</title>
 		
 		<meta charset="UTF-8"> 
-		<LINK href="../webgl.css" rel="stylesheet" type="text/css">
+		<LINK href="../../../webgl.css" rel="stylesheet" type="text/css">
 		
-		<script src="../js/lib/common.js", type="text/javascript"></script>
-		<script src="../js/lib/vec3.js", type="text/javascript"></script>
-		<script src="../js/lib/three.min.js" type="text/javascript"></script>
-		<script src='../js/lib/dat.gui.min.js' type='text/javascript'></script>
-		<script src="../js/lib/fpsmeter.js" type="text/javascript"></script>
-		<script src="../js/lib/OrbitControls.js" type="text/javascript"></script>
-		<script src="../js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
+		<script src="../../../js/lib/common.js", type="text/javascript"></script>
+		<script src="../../../js/lib/vec3.js", type="text/javascript"></script>
+		<script src="../../../js/lib/three.min.js" type="text/javascript"></script>
+		<script src="../../../js/lib/dat.gui.min.js" type="text/javascript"></script>
+		<script src="../../../js/lib/fpsmeter.js" type="text/javascript"></script>
+		<script src="../../../js/lib/OrbitControls.js" type="text/javascript"></script>
+		<script src="../../../js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
 		
-		<script src="../js/Lib.Renderer.js" type="text/javascript"></script>
-		<script src="../js/Lib.ObjectManager.js" type="text/javascript"></script>
+		<script src="../../../js/Lib.Renderer.js" type="text/javascript"></script>
+		<script src="../../../js/Lib.ObjectManager.js" type="text/javascript"></script>
 	</head>
 	
 	<body>
