--- a/projects/webgl/tradesim/trade_sim.html
+++ b/projects/webgl/tradesim/trade_sim.html
@@ -5,20 +5,20 @@
 		<title>Trade Simulation</title>
 		
 		<meta charset="UTF-8"> 
-		<LINK href="../webgl.css" rel="stylesheet" type="text/css">
+		<LINK href="../../../webgl.css" rel="stylesheet" type="text/css">
 		
-		<script src="../js/lib/jquery-2.1.1.min.js" type="text/javascript"></script>
-		<script src="../js/lib/common.js" type="text/javascript"></script>
-		<script src="../js/lib/vec3.js" type="text/javascript"></script>
-		<script src="../js/lib/three.min.js" type="text/javascript"></script>
-		<script src="../js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
-		<script src="../js/lib/THREEx.WindowResize.js" type="text/javascript"></script>
-		<script src="../js/lib/OrbitControls.js" type="text/javascript"></script>
-		<script src="../js/lib/dat.gui.min.js" type="text/javascript"></script>
-		<script src="../js/lib/fpsmeter.js" type="text/javascript"></script>
+		<script src="../../../js/lib/jquery-2.1.1.min.js" type="text/javascript"></script>
+		<script src="../../../js/lib/common.js" type="text/javascript"></script>
+		<script src="../../../js/lib/vec3.js" type="text/javascript"></script>
+		<script src="../../../js/lib/three.min.js" type="text/javascript"></script>
+		<script src="../../../js/lib/THREEx.FullScreen.js" type="text/javascript"></script>
+		<script src="../../../js/lib/THREEx.WindowResize.js" type="text/javascript"></script>
+		<script src="../../../js/lib/OrbitControls.js" type="text/javascript"></script>
+		<script src="../../../js/lib/dat.gui.min.js" type="text/javascript"></script>
+		<script src="../../../js/lib/fpsmeter.js" type="text/javascript"></script>
 		
-		<script src="../js/Lib.Renderer.js" type="text/javascript"></script>
-		<script src="../js/Lib.ObjectManager.js" type="text/javascript"></script>
+		<script src="../../../js/Lib.Renderer.js" type="text/javascript"></script>
+		<script src="../../../js/Lib.ObjectManager.js" type="text/javascript"></script>
 		
 		<script type="x-shader/x-vertex" id="unlit_v_shader">
 			void main() {
