Moved movement sim to end with wip note.

--- a/projects/webgl/webgl_projects.html
+++ b/projects/webgl/webgl_projects.html
@@ -18,19 +18,20 @@
 			</h1>
 			<ul class="grid columns-3">
 				<li>
-					<a href="shipsim/ship_sim.html" title="Ship Movement Simulation (Under Development)"><img src="../../images/spp_sim_bg.png"></a>
-					<h3>Ship Movement Simulation</h3>
-					<p>A testing environment for ship simulation controls.</p>
+					<a href="sppsim/spp_sim.html" title="Self-Propelled Particle Simulation"><img src="../../images/spp_sim_bg.png"></a>
+					<h3>Self-Propelled Particle Simulation</h3>
+					<p>A minimal simulation of self-propelled particles.</p>
 				</li>
+
 				<li>
 					<a href="tradesim/trade_sim.html" title="Space Trading Simulation"><img src="../../images/trd_sim_bg.png"></a>
 					<h3>Agent Based Space Trading Simulation</h3>
 					<p>An agent based simulation of trading between colonies.</p>
 				</li>
 				<li>
-					<a href="sppsim/spp_sim.html" title="Self-Propelled Particle Simulation"><img src="../../images/spp_sim_bg.png"></a>
-					<h3>Self-Propelled Particle Simulation</h3>
-					<p>A minimal simulation of self-propelled particles.</p>
+					<a href="shipsim/ship_sim.html" title="Ship Movement Simulation (Under Development)"><img src="../../images/spp_sim_bg.png"></a>
+					<h3>Ship Movement Simulation (Under Development)</h3>
+					<p>A testing environment for ship simulation controls.</p>
 				</li>
 			</ul>
 		</div>
