Trade sim camera positioning.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<body>
 		<div class="topBar">
 			<div class="titleBar">
-				<h3 class="name">Douglas Hoyal Cuthill</h3>
+				<a href="/index.html">Douglas Hoyal Cuthill</a>
 			</div>
 			<div class="navBar">
-				<a class="projects" href="projects/projects.html">Projects</a>
+				<a href="projects/projects.html">Projects</a>
 			</div>
 		</div>
 		<div class="centerColumn">
