NEW PROJECT: GA TREE

--- a/projects/webgl/webgl_projects.html
+++ b/projects/webgl/webgl_projects.html
@@ -33,6 +33,11 @@
 					<h3>Ship Movement Simulation (Under Development)</h3>
 					<p>A testing environment for ship simulation controls.</p>
 				</li>
+				<li>
+					<a href="ga/ga_sim.html" title="Genetic Algorithm for Tree Bifurcation"><img src="../../images/spp_sim_bg.png"></a>
+					<h3>Genetic Algorithm for Tree Bifurcation (Under Development)</h3>
+					<p>A genetic algorithm search for aesthetically pleasing trees using a number of different metrics for fitness evaluation.</p>
+				</li>
 			</ul>
 		</div>
 	</body>
