--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 			</div>
 		</div>
 		<div class="centerColumn">
+			<h1 class="centerColumn">
+				Projects
+			</h1>
+			<ul class="grid columns-3">
+				<li>
+					<a href="projects/webgl/webgl_projects.html" title="WebGL Projects"><img src="images/spp_sim_bg.png"></a>
+					<h3>WebGL Projects</h3>
+				</li>
+			</ul>
 		</div>
 	</body>
 </html>
