--- a/projects/webgl/sppsim/spp_sim.html
+++ b/projects/webgl/sppsim/spp_sim.html
@@ -27,11 +27,8 @@
 		</div>
 		<div class="centerColumn">
 			<h1>
-				Agent-based Trade Simulation.
+				The Self-Propelled Particle (SPP) Model of Flocking.
 			</h1>
-			<p>
-				A Self-Propelled Particle (SPP) simulation used to model flocking behaviour.
-			</p>
 			<div id="canvas" class="webgl">
 				<script src="js/sppsim_model.js" type="text/javascript"></script>
 			</div>
