Adjusted top bar for all pages.

--- a/projects/webgl/tradesim/trade_sim.html
+++ b/projects/webgl/tradesim/trade_sim.html
@@ -293,7 +293,7 @@
 	<body>
 		<div class="topBar">
 			<div class="titleBar">
-				<h1 class="titleBar">Douglas Hoyal Cuthill</h1>
+				<a href="/index.html">Douglas Hoyal Cuthill</a>
 			</div>
 		</div>
 		<div class="centerColumn">
