--- a/projects/webgl/webgl_projects.html
+++ b/projects/webgl/webgl_projects.html
@@ -6,10 +6,7 @@
 	<body>
 		<div class="topBar">
 			<div class="titleBar">
-				<h3 class="name">Douglas Hoyal Cuthill</h3>
-			</div>
-			<div class="navBar">
-				<a class="projects" href="projects.html">Projects</a>
+				<a href="/index.html">Douglas Hoyal Cuthill</a>
 			</div>
 		</div>
 		<div class="centerColumn">
